# mathematical-olympiad-factory

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  add_agent_names.sh  curriculum.py  fix_audio_controls.py  fix_back_to_alex.py  fix_cp_remaining.py  fix_cp_teach_ask.py  fix_engine.py  fix_first_handover.py  fix_json_parse.py  fix_play_fn.py  fix_render_teach.py  fix_renderer_images.py  fix_restore_spec.py  fix_skip_and_back.py  fix_speak2.py  fix_speak_voice.py  fix_spec_cache.py  fix_stages.py  fix_syntax.py  fix_teach_ask2.py  fix_teach_ask3.py  interview_page.sh  patch_cp_factory.py  patch_session_engine_e_v4.py  patch_stt_word_timestamps.py  pyproject.toml  run.py  setup.sh  teach_ask_cp_new.py  voice_integration.sh
.github/workflows/: ci.yml  deploy.yml
deploy/: factory.service  provision.sh
docs/: runbook.md
patches/: add_concept_accumulation.py  apply_branding.py  fix_add_teach_ask.py  fix_audio_controls.py  fix_back_js.py  fix_back_to_alex.py  fix_create_session.py  fix_engine.py  fix_first_handover.py  fix_image_submission.py  fix_json_parse.py  fix_no_replay.py  fix_phase_audio.py  fix_play_fn.py  fix_pregenerate_jordan.py  fix_render_teach.py  fix_renderer_images.py  fix_replay_and_btn.py  fix_restore_spec.py  fix_revisit_audio.py  fix_settings_scope.py  fix_skip_and_back.py  fix_speak2.py  fix_speak_voice.py  fix_spec_cache.py  fix_stages.py  fix_syntax.py  fix_teach_ask.py  fix_teach_ask2.py  fix_teach_ask3.py  fix_teach_complete.py  fix_voice.py  fix_voiceid.py  fix_whiteboard2.py  json_routes.sh  patch_schemas_e.py  patch_session_engine_concept.py  patch_session_engine_e_v4.py  patch_session_engine_teach_v2.py  patch_stages_concept.py  (+2 more)
src/competitive_programming_factory/: app.py  config.py  curriculum.py  session_store.py
src/competitive_programming_factory/engine/: concept_store.py  diagram_evaluator.py  diagram_generator.py  prompt_renderer.py  session_engine.py  teach_spec.py
src/competitive_programming_factory/logging/: __init__.py  config.py
src/competitive_programming_factory/middleware/: auth.py  rate_limit.py  request_logging.py
src/competitive_programming_factory/models/: schemas.py
src/competitive_programming_factory/routes/: diagrams.py  sessions.py  stages.py  state.py  visualize.py  voice.py
src/connectionsphere_factory/: app.py  config.py  session_store.py
tests/: conftest.py
tests/e2e/: test_interview_flow.py
tests/integration/: test_session_engine.py
tests/smoke/: test_critical_paths.py
tests/unit/: test_concept_store.py  test_security.py  test_session_behaviour.py
(+63 files in other folders)
