[project]
name            = "competitive-programming-factory"
version         = "0.1.0"
description     = "Mathematical olympiad competitive programming tutor"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.40.0",
    "jinja2>=3.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "graphviz>=0.20.1",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "cartesia[websockets]>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath   = ["src"]
testpaths    = ["tests"]
addopts      = "--strict-markers"
markers      = [
    "unit:        Fast, isolated — no I/O, no network",
    "integration: Engine + store + domain wired together, Claude mocked",
    "e2e:         Full HTTP flows through the app, Claude mocked",
    "smoke:       Post-deploy sanity — must pass in <10s",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
